# ipa-download

./: index.html  package-lock.json  package.json  vite.config.ts
.trellis/: .template-hashes.json
.trellis/spec/frontend/: component-guidelines.md  index.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-29-pseudo-multi-account-ui/: design.md  implement.md  prd.md  task.json
.trellis/workspace/vibedirty/: index.md  journal-1.md
scripts/: build-app.sh
src/: App.tsx  api.ts  i18n.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipatool.rs  lib.rs  main.rs  pty.rs  store.rs
