[package]
name = "ipatool-ui"
version = "0.1.0"
description = "Desktop UI wrapper for ipatool"
authors = ["IPATool UI"]
edition = "2021"

[lib]
name = "ipatool_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
portable-pty = "0.9"
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
which = "8"
